--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Kartarpura Lounge</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                    <h1 class="text-primary m-0"><i class=""></i></h1>
+                     <img src="img/kartarpura.png" alt="Logo"> 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -69,6 +69,12 @@
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
                     <h1 class="display-3 text-white mb-3 animated slideInDown">Contact Us</h1>
+                    <div id="social-buttons" class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href="https://wa.me/923358740011" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/kartarpuralounge?mibextid=LQQJ4d" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/loungekartarpura?igsh=dG9xZDJwMGdlaG9o" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </div>
+                    
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -89,6 +95,7 @@
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Contact Us</h5>
                     <h1 class="mb-5">Contact For Any Query</h1>
                 </div>
+               
                 <div class="row g-4">
                     <div class="col-12">
                         <div class="row gy-4">
